# django_devolution_api

./: README.md  pyproject.toml
devolution_api/: manage.py
devolution_api/devolution/: admin.py  apps.py  models.py
devolution_api/devolution/migrations/: 0001_initial.py
devolution_api/devolution_api/: asgi.py  settings.py  urls.py  wsgi.py
